# genie

./: .cursorrules  .env.example  .eslintrc.js  .gitignore  .markdownlint.json  API_INTEGRATION_GUIDE.md  ARCHITECTURE.md  BUG_FIXES_LOG.md  CLAUDE.md  DATA_PERSISTENCE_STRATEGY.md  DEPLOYMENT.md  DEPLOYMENT_INSTRUCTIONS.md  DESIGN.md  DESIGN_DOCUMENT.md  DOCKER_DEPLOYMENT_GUIDE.md  DOCKER_GUIDE.md  DOCKER_SETUP.md  DOCS_INDEX.md  DOCS_ORGANIZATION.md  Dockerfile.api  Dockerfile.backend  Dockerfile.web  ENVIRONMENT_CONFIG_GUIDE.md  FINAL_PROJECT_REPORT.md  FINAL_SERVICE_CONFIGURATION_REPORT.md  FLUTTER_IMPLEMENTATION_PLAN.md  FLUTTER_UNIFIED_INTERACTION_PLAN.md  GITHUB_ACTIONS_BUILD_SUMMARY.md  GITHUB_ACTIONS_GUIDE.md  IMPLEMENTATION_SUMMARY.md  K8S_DEPLOYMENT_GUIDE.md  MACBOOK_DEPLOYMENT_SUMMARY.md  PLATFORM_GUIDE.md  POMODORO_GENIE_COMPLETE.md  PORT_3001_CONFIGURATION_REPORT.md  PROJECT_CLEANUP_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_PROGRESS_REPORT.md  README.md  REFACTORING_SUMMARY.md  (+49 more)
.claude/: settings.local.json
api-docs/: README.md
backend/: Dockerfile  INTEGRATION_GUIDE.md  README.md  env.example  go.mod  go.sum  main.go  main_real.go  test-api.sh
desktop/src-tauri/: Cargo.toml
desktop/src-tauri/src/: api.rs  main.rs  models.rs  notifications.rs  startup.rs  storage.rs  tray.rs
docker/: nginx.conf
docs/: IMPLEMENTATION_ROADMAP.md  INDEX.md  README.md  UI_REDESIGN_PLAN.md  backend-integration.md  data-binding-patterns.md  frontend-design.md  frontend-project-architecture.md  implementation-roadmap.md  migration-checklist.md  (+2 more)
k8s/: ingress.yaml  (+4 more)
(+396 files in other folders)
