[package]
name = "pomodoro-desktop"
version = "1.0.0"
description = "A cross-platform Pomodoro task and time management desktop application"
authors = ["Pomodoro Team"]
license = "MIT"
repository = "https://github.com/pomodoro-team/pomodoro-app"
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["api-all", "system-tray", "notification-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

# Local storage
rusqlite = { version = "0.30", features = ["bundled"] }
dirs = "5.0"

# HTTP client for API communication
reqwest = { version = "0.11", features = ["json"] }

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true